# chess

./: .gitignore  CMakeLists.txt  README.md  board.cpp  board.hpp  chesspiece.cpp  chesspiece.hpp  main.cpp
networking/: gen_code.cxx  handler.cpp  handler.hpp  master.cpp  master.hpp  slave.cpp  slave.hpp
